--- a/src/templates/includes/_megamenu.html
+++ b/src/templates/includes/_megamenu.html
@@ -1,4 +1,4 @@
-<ul class="fresh-menu no-ul" id="menu-{{ loop.index }}" data-menu="{{ loop.index }}" data-level="1">
+<ul class="suub-naav no-ul" id="menu-{{ loop.index }}" data-menu="{{ loop.index }}" data-level="1">
     <li><a href="#item-1A{{ loop.index }}">À propos</a></li>
     <li><a href="#item-2A{{ loop.index }}">Sur Github</a></li>
     <li><a href="#item-3A{{ loop.index }}">Contact</a></li>
