--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -41,7 +41,7 @@
             </div>
 
             <nav id="nav" role="navigation" aria-label="Navigation principale" data-level="1">
-                <ul class="navbar-mega no-ul">
+                <ul class="naav no-ul">
                     {% for menu in menus %}
                     <li>
                         {% include 'includes/_nav.html' %}
